@@ -9,9 +9,7 @@ import com.yuanno.soulsawakening.abilities.elements.lunar.*;
 import com.yuanno.soulsawakening.abilities.elements.normal.NormalBuffAbility;
 import com.yuanno.soulsawakening.abilities.elements.poison.*;
 import com.yuanno.soulsawakening.abilities.elements.shadow.*;
-import com.yuanno.soulsawakening.abilities.elements.thunder.ThunderStepAbility;
-import com.yuanno.soulsawakening.abilities.elements.thunder.ThunderAttackAbility;
-import com.yuanno.soulsawakening.abilities.elements.thunder.ThunderStrikeAbility;
+import com.yuanno.soulsawakening.abilities.elements.thunder.*;
 import com.yuanno.soulsawakening.abilities.elements.water.AquaSlashAbility;
 import com.yuanno.soulsawakening.abilities.elements.water.TidalWaveAbility;
 import com.yuanno.soulsawakening.abilities.elements.water.WaterPrisonAbility;
@@ -51,7 +49,7 @@ public class ModAbilities {
     public static final Ability[] DARK_ZANPAKUTO = new Ability[] {DarkStepAbility.INSTANCE, ShadowAttackAbility.INSTANCE, UmbralCloakAbility.INSTANCE, DarkBallAbility.INSTANCE, ShadowCloneAbility.INSTANCE};
     public static final Ability[] FIRE_ZANPAKUTO = new Ability[] {FireAttackAbility.INSTANCE, FireWaveAbility.INSTANCE, FireBallAbility.INSTANCE, FireCoatAbility.INSTANCE, FireProwessAbility.INSTANCE};
     public static final Ability[] HEAL_ZANPAKUTO = new Ability[] {HealingTouchAbility.INSTANCE, RevitilazingAuraAbility.INSTANCE, SelfHealingAbility.INSTANCE, SecondChanceAbility.INSTANCE, DamageHealAbility.INSTANCE};
-    public static final Ability[] THUNDER_ZANPAKUTO = new Ability[] {ThunderStepAbility.INSTANCE, ThunderAttackAbility.INSTANCE, ThunderStrikeAbility.INSTANCE};
+    public static final Ability[] THUNDER_ZANPAKUTO = new Ability[] {ThunderStepAbility.INSTANCE, ThunderAttackAbility.INSTANCE, ThunderStrikeAbility.INSTANCE, ThunderballAbility.INSTANCE, ThunderBoostAbility.INSTANCE};
     public static final Ability[] LUNAR_ZANPAKUTO = new Ability[] {LunarBlessingAbility.INSTANCE, LunarCrescentAbility.INSTANCE, LunarWaveAbility.INSTANCE, LunarBlindnessAbility.INSTANCE, MoonLightAbility.INSTANCE};
     public static final Ability[] NORMAL_ZANPAKUTO = new Ability[] {NormalBuffAbility.INSTANCE};
     public static final Ability[] POISON_ZANPAKUTO = new Ability[] {PoisonAttackAbility.INSTANCE, VenomousCloudAbility.INSTANCE, AdrenalineCloudAbility.INSTANCE, PoisonStingAbility.INSTANCE, AntidoteAbility.INSTANCE};
