@@ -12,6 +12,8 @@
 - lunar blindness ability
 - antidote ability
 - poison sting ability
+- thunder boost ability
+- thunder ball ability
 
 ## changes
 - changed overall activation way (keys) for certain abilities, just check them out in game
